# filebrain

./: .gitignore  CLAUDE.md  ROADMAP.md  pyproject.toml
.cep/: CLAUDE.local.md  mikado.yaml  sessions.yaml
.cep/blog/: 2026-02-22-from-storage-to-search.md
.cep/decisions/: 001-chat-model.md  002-vector-database.md  003-chunking-strategy.md  004-rag-prompt-strategy.md
.cep/guidebook/: README.md  architecture.md  conventions.md  extractors.md  overview.md  project-anatomy.md  storage.md  vision.md
.cep/logs/: 2026-02-21.md  2026-02-22.md
src/filebrain/: __init__.py  pipeline.py
src/filebrain/cli/: __main__.py  app.py
src/filebrain/embeddings/: __init__.py  chunker.py  generator.py
src/filebrain/extractors/: __init__.py  base.py  code.py  pdf.py  plain_text.py  registry.py
src/filebrain/query/: __init__.py  engine.py
src/filebrain/store/: __init__.py  metadata.py  vector.py
src/filebrain/watcher/: __init__.py  watcher.py
tests/: test_cli.py  test_pipeline.py  test_smoke.py  test_watcher.py
tests/test_embeddings/: __init__.py  test_chunker.py  test_generator.py
tests/test_extractors/: test_code.py  test_extractor_interface.py  test_pdf.py  test_plain_text.py  test_registry.py
tests/test_query/: test_engine.py
tests/test_store/: test_metadata.py  test_vector.py
