[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filebrain"
version = "0.1.0"
description = "Local-first file indexing and semantic search powered by local LLMs"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pymupdf>=1.27,<2",            # PDF text extraction
    "qdrant-client>=1.12,<2",      # Vector database (local embedded mode, ADR-002)
    "watchdog>=6.0,<7",            # Filesystem event monitoring
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
filebrain = "filebrain.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/filebrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
